5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1575_579.log
== TEST (2019-03-12 18:12:46) 
-- CODE:
print("A UFAM tem",2019-1909"anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem",2019-1909"anos de fundacao.")
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:13:07) 
-- CODE:
print("A UFAM tem",2019-1909,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:13:26) 
-- CODE:
print("A UFAM tem",2019-1909,"anos de fundacao.")
-- EXECUTION TIME:
0.138656
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:13:34) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao.")
-- EXECUTION TIME:
0.215513
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
